website/versioned_docs/version-0.30/shadow-props.md
---
id: version-0.30-shadow-props
title: Shadow Props
original_id: shadow-props
---

### Props

* [`shadowColor`](shadow-props.md#shadowcolor)
* [`shadowOffset`](shadow-props.md#shadowoffset)
* [`shadowOpacity`](shadow-props.md#shadowopacity)
* [`shadowRadius`](shadow-props.md#shadowradius)

---

# Reference

## Props

### `shadowColor`

Sets the drop shadow color

| Type               | Required | Platform |
| ------------------ | -------- | -------- |
| [color](colors.md) | No       | iOS      |

---

### `shadowOffset`

Sets the drop shadow offset

| Type | Required | Platform |
| ---- | -------- | -------- |


| ReactPropTypes.shape( {width: ReactPropTypes.number, height: ReactPropTypes.number} ) | No | iOS |

---

### `shadowOpacity`

Sets the drop shadow opacity (multiplied by the color's alpha component)

| Type                  | Required | Platform |
| --------------------- | -------- | -------- |
| ReactPropTypes.number | No       | iOS      |

---

### `shadowRadius`

Sets the drop shadow blur radius

| Type                  | Required | Platform |
| --------------------- | -------- | -------- |
| ReactPropTypes.number | No       | iOS      |
